@@ -30,6 +30,7 @@ import static org.junit.jupiter.api.Assertions.*;
 @ExtendWith(SpringExtension.class)
 class CycleServiceTest {
 
+
     @SuppressWarnings("unused")
     @MockitoBean
     private JwtRequestFilter jwtRequestFilter;
@@ -42,6 +43,7 @@ class CycleServiceTest {
     private EagleResultDto eagleResultDto;
     private static Player player;
 
+    @SuppressWarnings("unused")
     @Autowired
     private CycleService cycleService;
 
@@ -54,7 +56,7 @@ class CycleServiceTest {
     }
 
     @BeforeEach
-    public void setupEachTest() {
+    void setupEachTest() {
 
         cycle = new Cycle();
         cycle.setName("Test cycle");
@@ -163,9 +165,9 @@ class CycleServiceTest {
         assertDoesNotThrow(() -> cycleService.removeLastCycleTournament(cycle));
         var cycleResult2 = cycleResultRepository.findByCycle(cycle);
         assertEquals(1, cycleResult2.size());
-        assertEquals(4, cycleResult2.get(0).getResults().length);
-        assertEquals(40, cycleResult2.get(0).getCycleScore());
-        assertEquals(40, cycleResult2.get(0).getTotal());
+        assertEquals(4, cycleResult2.getFirst().getResults().length);
+        assertEquals(40, cycleResult2.getFirst().getCycleScore());
+        assertEquals(40, cycleResult2.getFirst().getTotal());
         assertEquals(1, cycleTournamentRepository.findByCycleOrderById(cycle).size());
     }
 
@@ -206,7 +208,7 @@ class CycleServiceTest {
         cycleService.addCycle(cycle);
 
         assertEquals(1, cycleService.findAllCycles().size());
-        assertEquals("Test cycle", cycleService.findAllCycles().get(0).getName());
+        assertEquals("Test cycle", cycleService.findAllCycles().getFirst().getName());
 
     }
 
@@ -256,7 +258,7 @@ class CycleServiceTest {
 
         cycleService.findAllCycles();
 
-        assertEquals(Cycle.STATUS_CLOSE, cycleService.findAllCycles().get(0).getStatus());
+        assertEquals(Cycle.STATUS_CLOSE, cycleService.findAllCycles().getFirst().getStatus());
 
     }
 
@@ -270,12 +272,4 @@ class CycleServiceTest {
 
         assertDoesNotThrow(() -> cycleService.deleteCycle(cycle.getId()));
     }
-
-    @AfterAll
-    public static void done() {
-
-        log.info("Clean up completed");
-
-    }
-
 }
