@@ -13,6 +13,7 @@ import com.greg.golf.security.JwtRequestFilter;
 import com.greg.golf.security.aes.StringUtility;
 import jakarta.mail.MessagingException;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import org.junit.ClassRule;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -65,7 +66,7 @@ class TournamentServiceTest {
 	private static Long roundId;
 
 	@BeforeAll
-	public static void setup(@Autowired PlayerService playerService, @Autowired CourseService courseService,
+	static void setup(@Autowired PlayerService playerService, @Autowired CourseService courseService,
 			@Autowired RoundRepository roundRepository, @Autowired PlayerRoundRepository playerRoundRepository,
 			@Autowired TournamentRepository tournamentRepository) {
 
@@ -132,6 +133,7 @@ class TournamentServiceTest {
 		tournament.setBestRounds(Common.ALL_ROUNDS);
 		tournament.setMaxPlayHcp(54);
 		tournament.setPlayHcpMultiplayer(1f);
+		tournament.setCanUpdateHcp(false);
 		tournamentRepository.save(tournament);
 
 		log.info("Set up completed");
@@ -159,7 +161,7 @@ class TournamentServiceTest {
 		tournamentResult.setStbNet(0);
 		tournamentResult.setStrokeRounds(1);
 		tournamentResult.setPlayer(player);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 		tournamentResult.setTournament(tournament);
 		tournamentResultRepository.save(tournamentResult);
 
@@ -197,7 +199,7 @@ class TournamentServiceTest {
 		tournamentResult.setStbNet(0);
 		tournamentResult.setStrokeRounds(1);
 		tournamentResult.setPlayer(player);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 		tournamentResult.setTournament(tournament);
 		tournamentResultRepository.save(tournamentResult);
 
@@ -210,7 +212,7 @@ class TournamentServiceTest {
 		tournamentResultRepository.save(tournamentResult);
 
 		tournamentService.deleteResult(tournamentResult.getId());
-		Assertions.assertEquals(0, tournamentService.findAllTournamentsPageable(0).get(0).getTournamentResult().size());
+		Assertions.assertEquals(0, tournamentService.findAllTournamentsPageable(0).getFirst().getTournamentResult().size());
 	}
 
 
@@ -231,17 +233,17 @@ class TournamentServiceTest {
 		tournamentResult.setStbNet(0);
 		tournamentResult.setStrokeRounds(1);
 		tournamentResult.setPlayer(player);
-		tournamentResult.setTournament(tournamentService.findAllTournamentsPageable(0).get(0));
+		tournamentResult.setTournament(tournamentService.findAllTournamentsPageable(0).getFirst());
 		tournamentResultRepository.save(tournamentResult);
 
-		Tournament tournament = tournamentRepository.findAll().get(0);
+		Tournament tournament = tournamentRepository.findAll().getFirst();
 
 
-		var retRound = roundRepository.findAll().get(0);
+		var retRound = roundRepository.findAll().getFirst();
 		tournamentService.updateSTB(tournamentResult, retRound, null, player, 38.4F, tournament);
 
-		log.info("STB net: " + tournamentResult.getStbNet());
-		log.info("STB gross: " + tournamentResult.getStbGross());
+        log.debug("STB net: {}", tournamentResult.getStbNet());
+        log.debug("STB gross: {}", tournamentResult.getStbGross());
 		Assertions.assertEquals(62, tournamentResult.getStbNet().intValue());
 		Assertions.assertEquals(17, tournamentResult.getStbGross().intValue());
 	}
@@ -261,6 +263,7 @@ class TournamentServiceTest {
 		tournament.setBestRounds(1);
 		tournament.setPlayHcpMultiplayer(1F);
 		tournament.setMaxPlayHcp(54);
+		tournament.setCanUpdateHcp(false);
 		tournament = tournamentService.addTournament(tournament);
 
 		Assertions.assertNotNull(tournament.getId());
@@ -275,14 +278,14 @@ class TournamentServiceTest {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
 		var course = courseRepository.findById(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
 		round.getCourse().setHoles(holeRepository.findByCourse(course));
 
-		round.getScoreCard().get(0).setStroke(20);
+		round.getScoreCard().getFirst().setStroke(20);
 		var correctedScore = tournamentService.getCorrectedStrokes(player, round);
 
-		log.info("corrected Strokes: " + correctedScore);
+        log.debug("corrected Strokes: {}", correctedScore);
 		Assertions.assertEquals(91, correctedScore);
 	}
 
@@ -293,10 +296,10 @@ class TournamentServiceTest {
 										@Autowired RoundRepository roundRepository) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
 		round.getCourse().setHoles(holeRepository.findByCourse(round.getCourse()));
-		round.getScoreCard().get(0).setStroke(20);
+		round.getScoreCard().getFirst().setStroke(20);
 
 		var playerRound = new PlayerRound();
 		playerRound.setSr(113);
@@ -304,7 +307,7 @@ class TournamentServiceTest {
 
 		var scoreDifferential = tournamentService.getScoreDifferential(playerRound, round, player);
 
-		log.info("score differential: " + scoreDifferential);
+        log.debug("score differential: {}", scoreDifferential);
 		Assertions.assertEquals(91, (int) scoreDifferential);
 	}
 
@@ -323,7 +326,7 @@ class TournamentServiceTest {
 		tournamentResult.setStbNet(0);
 		tournamentResult.setStrokeRounds(1);
 		tournamentResult.setPlayer(player);
-		tournamentResult.setTournament(tournamentService.findAllTournamentsPageable(0).get(0));
+		tournamentResult.setTournament(tournamentService.findAllTournamentsPageable(0).getFirst());
 		tournamentResultRepository.save(tournamentResult);
 
 		TournamentRound tournamentRound =
@@ -347,7 +350,7 @@ class TournamentServiceTest {
 	@Test
 	void getAllTournamentResultsTestNotAllRounds(@Autowired TournamentRepository tournamentRepository) {
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		tournament.setBestRounds(1);
 		tournamentRepository.save(tournament);
 
@@ -361,7 +364,7 @@ class TournamentServiceTest {
 	void getGrossStrokesTest(@Autowired PlayerService playerService, @Autowired RoundRepository roundRepository) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
 		var grossStrokes = tournamentService.getGrossStrokes(player, round);
 
@@ -377,9 +380,9 @@ class TournamentServiceTest {
 						   @Autowired TournamentRepository tournamentRepository) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
-		Tournament tournament = tournamentRepository.findAll().get(0);
+		Tournament tournament = tournamentRepository.findAll().getFirst();
 
 		var netStrokes = tournamentService.getNetStrokes(player, round, 99, null, 38.4F, tournament);
 
@@ -395,9 +398,9 @@ class TournamentServiceTest {
 						   @Autowired TournamentRepository tournamentRepository) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
-		Tournament tournament = tournamentRepository.findAll().get(0);
+		Tournament tournament = tournamentRepository.findAll().getFirst();
 		tournament.setMaxPlayHcp(18);
 		tournament.setPlayHcpMultiplayer(0.75f);
 		tournamentRepository.save(tournament);
@@ -415,10 +418,10 @@ class TournamentServiceTest {
 									 @Autowired RoundRepository roundRepository,
 									 @Autowired TournamentRepository tournamentRepository) {
 
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 		var player = playerService.getPlayer(1L).orElseThrow();
 
-		Tournament tournament = tournamentRepository.findAll().get(0);
+		Tournament tournament = tournamentRepository.findAll().getFirst();
 
 		var netStrokes = tournamentService.getNetStrokes(player, round, 22, null, 38.4F, tournament);
 
@@ -433,8 +436,8 @@ class TournamentServiceTest {
 								  @Autowired TournamentPlayerRepository tournamentPlayerRepository,
 								  @Autowired TournamentRoundRepository tournamentRoundRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -460,8 +463,8 @@ class TournamentServiceTest {
 	void addNewRoundToTournamentResultTest(@Autowired RoundRepository roundRepository,
 										   @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -485,8 +488,8 @@ class TournamentServiceTest {
 	void addNewRoundToTournamentResultTestStrokesNotApplicable(@Autowired RoundRepository roundRepository,
 															   @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -496,7 +499,7 @@ class TournamentServiceTest {
 
 		tournamentPlayerRepository.save(tournamentPlayer);
 
-		round.getScoreCard().get(0).setStroke(Common.HOLE_GIVEN_UP);
+		round.getScoreCard().getFirst().setStroke(Common.HOLE_GIVEN_UP);
 		roundRepository.save(round);
 		tournamentService.updateTournamentResult(round, tournament);
 		var tr = tournamentResultRepository.findByTournament(tournament).orElseThrow();
@@ -510,9 +513,9 @@ class TournamentServiceTest {
 	void addNewRoundToTournamentResultTestStrokesNotApplicableOneRoundApplicable(@Autowired RoundRepository roundRepository,
 																				 @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
+		var round = roundRepository.findAll().getFirst();
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 		tournament.setBestRounds(1);
 
 		var tournamentPlayer = new TournamentPlayer();
@@ -524,7 +527,7 @@ class TournamentServiceTest {
 		tournamentPlayerRepository.save(tournamentPlayer);
 
 
-		round.getScoreCard().get(0).setStroke(Common.HOLE_GIVEN_UP);
+		round.getScoreCard().getFirst().setStroke(Common.HOLE_GIVEN_UP);
 		roundRepository.save(round);
 		tournamentService.updateTournamentResult(round, tournament);
 		var tr = tournamentResultRepository.findByTournament(tournament).orElseThrow();
@@ -540,8 +543,8 @@ class TournamentServiceTest {
 												@Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -577,10 +580,10 @@ class TournamentServiceTest {
 		var rounds = roundRepository.findAll();
 
 
-		var round = rounds.get(0);
+		var round = rounds.getFirst();
 
 		// set up 1 round as number of best rounds
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		tournament.setBestRounds(1);
 		tournament = tournamentRepository.save(tournament);
 
@@ -616,12 +619,12 @@ class TournamentServiceTest {
 	void updateTournamentResultWithNewRoundHoleGivenUpTest(@Autowired RoundRepository roundRepository, @Autowired PlayerService playerService) {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var redRound = roundRepository.findById(round.getId()).orElseThrow();
 
-		redRound.getScoreCard().get(0).setStroke(Common.HOLE_GIVEN_UP);
+		redRound.getScoreCard().getFirst().setStroke(Common.HOLE_GIVEN_UP);
 		var tournamentResult = new TournamentResult();
 		tournamentResult.setPlayedRounds(100);
 		tournamentResult.setStrokesBrutto(100);
@@ -643,8 +646,8 @@ class TournamentServiceTest {
 	void updateTournamentResultWithUpdatedRoundTest(@Autowired RoundRepository roundRepository,
 													@Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -656,14 +659,14 @@ class TournamentServiceTest {
 		tournamentService.updateTournamentResult(round, tournament);
 
 		// update the round which was already added to tournament
-		round.getScoreCard().get(0).setStroke(15);
+		round.getScoreCard().getFirst().setStroke(15);
 		roundRepository.save(round);
 
 		// try to update the tournament
 		var roundEvent = new RoundEvent(this, round);
 		tournamentService.handleRoundEvent(roundEvent);
 
-		Assertions.assertEquals(15, round.getScoreCard().get(0).getStroke().intValue());
+		Assertions.assertEquals(15, round.getScoreCard().getFirst().getStroke().intValue());
 
 		var tr = tournamentResultRepository.findByTournament(tournament).orElseThrow();
 		Assertions.assertEquals(90, tr.getStrokesBrutto().intValue());
@@ -677,8 +680,8 @@ class TournamentServiceTest {
 	void addTheNewRoundAndUpdateTournamentResultTest(@Autowired RoundRepository roundRepository,
 													 @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -700,8 +703,8 @@ class TournamentServiceTest {
 	void getTournamentRoundForTournamentResultTest(@Autowired RoundRepository roundRepository,
 												   @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var round = roundRepository.findAll().get(0);
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var round = roundRepository.findAll().getFirst();
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -712,7 +715,7 @@ class TournamentServiceTest {
 
 		tournamentService.updateTournamentResult(round, tournament);
 
-		var roundResults = tournamentResultRepository.findAll().get(0);
+		var roundResults = tournamentResultRepository.findAll().getFirst();
 
 		tournamentService.getTournamentRoundsForResult(roundResults.getId());
 
@@ -725,7 +728,7 @@ class TournamentServiceTest {
 	@Test
 	void getApplicableRoundsForTournamentTest(@Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -747,7 +750,7 @@ class TournamentServiceTest {
 	void getApplicableRoundsForTournamentButRoundNotExistTest(@Autowired TournamentPlayerRepository tournamentPlayerRepository,
 															  @Autowired RoundRepository roundRepository) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -770,7 +773,7 @@ class TournamentServiceTest {
 	@Test
 	void addRoundToTournamentForPlayerNotParticipantTest(@Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -795,7 +798,7 @@ class TournamentServiceTest {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
 		var course = courseService.getCourse(1L).orElseThrow();
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -843,11 +846,11 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		tournamentService.closeTournament(tournament.getId());
 
-		assertEquals(Cycle.STATUS_CLOSE, tournamentService.findAllTournamentsPageable(0).get(0).getStatus());
+		assertEquals(Cycle.STATUS_CLOSE, tournamentService.findAllTournamentsPageable(0).getFirst().getStatus());
 
 	}
 
@@ -863,7 +866,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournamentId = tournamentRepository.findAll().get(0).getId();
+		var tournamentId = tournamentRepository.findAll().getFirst().getId();
 
 		assertThrows(UnauthorizedException.class, () -> this.tournamentService.closeTournament(tournamentId));
 	}
@@ -884,7 +887,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
@@ -913,7 +916,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
@@ -937,7 +940,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(100L);
@@ -983,7 +986,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
@@ -1009,7 +1012,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournamentId = tournamentRepository.findAll().get(0).getId();
+		var tournamentId = tournamentRepository.findAll().getFirst().getId();
 
 
 		assertThrows(UnauthorizedException.class, () -> tournamentService.deletePlayers(tournamentId));
@@ -1030,7 +1033,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentResult = new TournamentResult();
 		tournamentResult.setPlayedRounds(100);
 		tournamentResult.setStrokesBrutto(100);
@@ -1064,7 +1067,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
@@ -1090,7 +1093,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournamentId = tournamentRepository.findAll().get(0).getId();
+		var tournamentId = tournamentRepository.findAll().getFirst().getId();
 
 		assertThrows(UnauthorizedException.class, () -> tournamentService.deletePlayer(tournamentId, 1L));
 	}
@@ -1110,7 +1113,7 @@ class TournamentServiceTest {
 
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentResult = new TournamentResult();
 		tournamentResult.setPlayedRounds(100);
 		tournamentResult.setStrokesBrutto(100);
@@ -1134,7 +1137,7 @@ class TournamentServiceTest {
 	void attemptToGetTournamentPlayersTest(@Autowired TournamentRepository tournamentRepository,
 										   @Autowired TournamentPlayerRepository tournamentPlayerRepository) {
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -1145,10 +1148,10 @@ class TournamentServiceTest {
 		assertEquals(1, tournamentService.getTournamentPlayers(tournament.getId()).size());
 	}
 
-	@DisplayName("Attempt to update tournament player handicap")
+	@DisplayName("Attempt to update tournament player handicap for tournament which does not allow for that")
 	@Transactional
 	@Test
-	void attemptToUpdateTournamentPlayerHcpTest(@Autowired TournamentRepository tournamentRepository,
+	void attemptToUpdateTournamentPlayerHcpNotAllowedTest(@Autowired TournamentRepository tournamentRepository,
 										   @Autowired TournamentPlayerRepository tournamentPlayerRepository,
 												@Autowired PlayerService playerService) {
 
@@ -1162,7 +1165,7 @@ class TournamentServiceTest {
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentPlayer = new TournamentPlayer();
 		tournamentPlayer.setPlayerId(1L);
 		tournamentPlayer.setTournamentId(tournament.getId());
@@ -1170,9 +1173,52 @@ class TournamentServiceTest {
 		tournamentPlayer.setWhs(1F);
 		tournamentPlayerRepository.save(tournamentPlayer);
 
-		tournamentService.updatePlayer(tournamentPlayer.getTournamentId(), tournamentPlayer.getPlayerId(), 2F);
+		var tournamentId = tournamentPlayer.getTournamentId();
+		var playerId = tournamentPlayer.getPlayerId();
 
-		assertEquals(2F, tournamentService.getTournamentPlayers(tournament.getId()).get(0).getWhs());
+		assertThrows(HcpChangeNotAllowedException.class, () ->
+				tournamentService.updatePlayerHcp(tournamentId, playerId, 2F));
+
+	}
+
+	@DisplayName("Attempt to update tournament player handicap for tournament which allow for that")
+	@Transactional
+	@Test
+	void attemptToUpdateTournamentPlayerHcpAllowedTest(@Autowired TournamentRepository tournamentRepository,
+														  @Autowired TournamentPlayerRepository tournamentPlayerRepository,
+														  @Autowired PlayerService playerService) {
+
+		var player = playerService.getPlayer(1L).orElseThrow();
+
+		UserDetails userDetails = new User(player.getId().toString(), player.getPassword(), new ArrayList<SimpleGrantedAuthority>());
+
+		var usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(userDetails, null,
+				userDetails.getAuthorities());
+
+		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
+
+		var t2 = new Tournament();
+		t2.setEndDate(new Date(1));
+		t2.setStartDate(new Date(1));
+		t2.setName("Test Cup");
+		t2.setPlayer(player);
+		t2.setStatus(Tournament.STATUS_OPEN);
+		t2.setBestRounds(Common.ALL_ROUNDS);
+		t2.setMaxPlayHcp(54);
+		t2.setPlayHcpMultiplayer(1f);
+		t2.setCanUpdateHcp(true);
+		t2 = tournamentRepository.save(t2);
+
+		var tournamentPlayer = new TournamentPlayer();
+		tournamentPlayer.setPlayerId(1L);
+		tournamentPlayer.setTournamentId(t2.getId());
+		tournamentPlayer.setNick("Test");
+		tournamentPlayer.setWhs(1F);
+		tournamentPlayerRepository.save(tournamentPlayer);
+
+		tournamentService.updatePlayerHcp(tournamentPlayer.getTournamentId(), tournamentPlayer.getPlayerId(), 2F);
+
+		assertEquals(2F, tournamentService.getTournamentPlayers(t2.getId()).getFirst().getWhs());
 	}
 
 	@DisplayName("Attempt to add tee time with no tee time")
@@ -1191,9 +1237,9 @@ class TournamentServiceTest {
 	@DisplayName("Attempt to add tee time by unauthorized user")
 	@Transactional
 	@Test
-	void attemptToAddTeeTimeByUnauthorizedUserTest(@Autowired TournamentRepository tournamentRepository) {
+	void attemptToAddTeeTimeByUnauthorizedUserTest() {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var teeTimeParameters = new TeeTimeParameters();
 		var teeTime = new TeeTime();
@@ -1218,7 +1264,7 @@ class TournamentServiceTest {
 	void attemptToAddTeeTimeByAuthorizedUserTest(@Autowired TeeTimeParametersRepository teeTimeParametersRepository,
 												 @Autowired PlayerService playerService) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var teeTimeParameters = new TeeTimeParameters();
 		teeTimeParameters.setFirstTeeTime("10:00");
@@ -1253,10 +1299,9 @@ class TournamentServiceTest {
 	@DisplayName("Attempt to get tee times")
 	@Transactional
 	@Test
-	void attemptToGetTeeTimes(@Autowired TeeTimeRepository teeTimeRepository,
-							  @Autowired PlayerService playerService) {
+	void attemptToGetTeeTimes(@Autowired PlayerService playerService) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var teeTimeParameters = new TeeTimeParameters();
 		teeTimeParameters.setFirstTeeTime("10:00");
@@ -1293,7 +1338,7 @@ class TournamentServiceTest {
 	@Test
 	void attemptToDeleteTeeTimesByUnauthorizedUserTest() {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
 		var teeTimeParameters = new TeeTimeParameters();
 		var teeTime = new TeeTime();
@@ -1315,26 +1360,11 @@ class TournamentServiceTest {
 	@DisplayName("Attempt to delete tee times by authorized user")
 	@Transactional
 	@Test
-	void attemptToDeleteTeeTimesByAuthorizedUserTest(@Autowired TeeTimeParametersRepository teeTimeParametersRepository,
-												 @Autowired PlayerService playerService) {
+	void attemptToDeleteTeeTimesByAuthorizedUserTest(@Autowired PlayerService playerService) {
 
-		var tournament = tournamentService.findAllTournamentsPageable(0).get(0);
+		var tournament = tournamentService.findAllTournamentsPageable(0).getFirst();
 
-		var teeTimeParameters = new TeeTimeParameters();
-		teeTimeParameters.setFirstTeeTime("10:00");
-		teeTimeParameters.setFlightSize(4);
-		teeTimeParameters.setPublished(false);
-		teeTimeParameters.setTeeTimeStep(10);
-
-		var teeTime = new TeeTime();
-		teeTime.setTime("10:00");
-		teeTime.setFlight(1);
-		teeTime.setHcp(10.0F);
-		teeTime.setNick("Golfer");
-
-		var teeTimes = new ArrayList<TeeTime>();
-		teeTimes.add(teeTime);
-		teeTimeParameters.setTeeTimes(teeTimes);
+		var teeTimeParameters = getTeeTimeParameters();
 
 		var player = playerService.getPlayer(1L).orElseThrow();
 
@@ -1351,6 +1381,26 @@ class TournamentServiceTest {
 		assertNull(tournamentService.getTeeTimes(tournament.getId()));
 	}
 
+	private static @NotNull TeeTimeParameters getTeeTimeParameters() {
+		var teeTimeParameters = new TeeTimeParameters();
+		teeTimeParameters.setFirstTeeTime("10:00");
+		teeTimeParameters.setFlightSize(4);
+		teeTimeParameters.setPublished(false);
+		teeTimeParameters.setTeeTimeStep(10);
+
+		var teeTime = new TeeTime();
+		teeTime.setTime("10:00");
+		teeTime.setFlight(1);
+		teeTime.setHcp(10.0F);
+		teeTime.setNick("Golfer");
+
+		ArrayList<TeeTime> teeTimes;
+		teeTimes = new ArrayList<>();
+		teeTimes.add(teeTime);
+		teeTimeParameters.setTeeTimes(teeTimes);
+		return teeTimeParameters;
+	}
+
 	@DisplayName("Send notification")
 	@Transactional
 	@Test
@@ -1360,7 +1410,7 @@ class TournamentServiceTest {
 
 		var player = playerService.getPlayer(1L).orElseThrow();
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentResult = new TournamentResult();
 		tournamentResult.setPlayedRounds(100);
 		tournamentResult.setStrokesBrutto(100);
@@ -1402,7 +1452,7 @@ class TournamentServiceTest {
 		player.setEmail("grzegorz.malewicz@gmail.com");
 		playerService.update(player);
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		var tournamentResult = new TournamentResult();
 		tournamentResult.setPlayedRounds(100);
 		tournamentResult.setStrokesBrutto(100);
@@ -1473,7 +1523,7 @@ class TournamentServiceTest {
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 		tournament.setStatus(Tournament.STATUS_CLOSE);
 		tournamentRepository.save(tournament);
 
@@ -1494,13 +1544,12 @@ class TournamentServiceTest {
 	@Transactional
 	@Test
 	void attemptToAddNotificationForOpenedTournamentButNoEmailSetTest(@Autowired TournamentRepository tournamentRepository,
-														 @Autowired PlayerService playerService,
-														 @Autowired TournamentNotificationRepository tournamentNotificationRepository) {
+														 @Autowired PlayerService playerService) {
 
 
 		var player = playerService.getPlayer(1L).orElseThrow();
 
-		UserDetails userDetails = new User(player.getId().toString(), player.getPassword(), new ArrayList<SimpleGrantedAuthority>());
+		UserDetails userDetails = new User(player.getId().toString(), player.getPassword(), new ArrayList<>());
 
 		var usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(userDetails, null,
 				userDetails.getAuthorities());
@@ -1508,14 +1557,14 @@ class TournamentServiceTest {
 		SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
 
-		var tournament = tournamentRepository.findAll().get(0);
+		var tournament = tournamentRepository.findAll().getFirst();
 
 		Long id = tournament.getId();
 		assertThrows(MailNotSetException.class, () -> tournamentService.addNotification(id));
 	}
 
 	@AfterAll
-	public static void done(@Autowired RoundRepository roundRepository,
+	static void done(@Autowired RoundRepository roundRepository,
 			@Autowired TournamentRepository tournamentRepository, @Autowired TournamentResultRepository tr) {
 
 		roundRepository.deleteAll();
